--- a/profiling/variant_calling/2.A.1_test.Rmd
+++ b/profiling/variant_calling/2.A.1_test.Rmd
@@ -73,33 +73,29 @@ multiqc -o MultiQC -v QA
 ```
 
 
-
-
-
-
-
 ------------------------
 
 #used trimglaore to filter the low quality reads that is less than 30 phredscore.
 #later used multiQC to aggregate the and visulalize quality control results.
 
+
+```{bash}
 module load trim_galore/0.6 cutadapt/2.8
 mkdir -p trimmed
 trim_galore --q 30 --fastqc --fastqc_args "-o QA" --illumina --length 50 --max_n 0 --output trimmed rawdata/ERR8017478_1.fastq.gz rawdata/ERR8017478_2.fastq.gz rawdata/ERR8017479_1.fastq.gz rawdata/ERR8017479_2.fastq.gz
 multiqc -o MultiQC -v QA trimmed
+```
 
 #later downloaded the refrence genome from JGI
 #using this link https://data.jgi.doe.gov/refine-download/phytozome?organism=Sbicolor&project=sorghumpan&_gl=1*iqrlda*_ga*MjEzMjg5ODk0OS4xNjk4OTM4NDM1*_ga_YBLMHYR3C2*MTY5OTMwNDg2My43LjEuMTY5OTMwNTAwOS4wLjAuMA..&cart=true&expanded=Phytozome-454
 
 #aligned the quality filtered reads with the refrence genome using BWA(Burrows wheeler Aligner) aligner tool.
+```{bash}
 module load bwa
-
 #indexing the refrence genome
 bwa index /work/jyanglab/subhash/2calling_snps/refrence/Phytozome/PhytozomeV13/Sbicolor/v5.1/assembly/Sbicolor_730_v5.0.fa.gz 
-
 #Aligning the reads
 bwa mem -t 8 $REF ${FQDIR}/${SAMPLE}_1_trimmed.fq.gz ${FQDIR}/${SAMPLE}_2_trimmed.fq.gz | gzip > ${OUTDIR}/${SAMPLE}.sam.gz
-
 #later converted the .sam to .bam format ( binary alignment matrix)
 module load samtools
 # Define the directory where your .sam.gz files are
@@ -112,8 +108,11 @@ BASENAME=$(basename ${SAMFILE} .sam.gz)
 # Convert SAM to BAM, sort it, and then index it
 samtools view -@ 8 -bS ${SAMFILE} | samtools sort -@ 8 -o ${OUTDIR}/${BASENAME}.sorted.bam
 samtools index ${OUTDIR}/${BASENAME}.sorted.bam
+```
 
 #used bcftools to call variants
+
+```{bash}
 module load bcftools
 #variant calling.
 bcftools mpileup -Ou -f /work/jyanglab/subhash/trimmed_readss/reference/Phytozome/PhytozomeV12/Sbicolor/assembly/Sbicolor_454_v3.0.1.hardmasked.fa /work/jyanglab/subhash/trimmed_readss/outpu
@@ -122,6 +121,9 @@ t_alignment/BAM_files/ERR8017475.sorted.bam | bcftools call -vmO z -o ERR8017475
 #later filtered the .vcf files generated
 #the quality should be greater than 10. and depeth of the coverage(DP) must be greater than 5. that is number of times a piece of DNA was read during sequence.
 bcftools filter -s LOWQUAL -g3 -G10 -i'%QUAL>10 && DP>5' ERR8017447.vcf.gz -O z -o ERR8017447.filtered.vcf.gz
+```
+
+
 
 
 
